// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`yup validateInOrder 正常: 姓名必填 1`] = `[ValidationError: 姓名必填]`;

exports[`yup validateInOrder 正常: 密码有误 1`] = `[ValidationError: 密码必须大于或等于100]`;

exports[`yup validateInOrderSync 正常: 姓名必填 1`] = `[ValidationError: 姓名必填]`;

exports[`yup validateInOrderSync 正常: 密码有误 1`] = `[ValidationError: 密码必须大于或等于100]`;

exports[`yup validatePlus 正常 1`] = `
Object {
  "data": Object {
    "name": "",
    "pass": 99,
  },
  "error": [ValidationError: 姓名必填],
}
`;

exports[`yup validatePlus 正常 2`] = `
Object {
  "data": Object {
    "name": "",
    "pass": 99,
  },
  "error": [ValidationError: 密码必须大于或等于100],
}
`;

exports[`yup validatePlus 正常 3`] = `
Object {
  "data": Object {
    "name": "8",
    "pass": 101,
  },
}
`;

exports[`yup validatePlusSync 正常 1`] = `
Object {
  "data": Object {
    "name": "",
    "pass": 99,
  },
  "error": [ValidationError: 姓名必填],
}
`;

exports[`yup validatePlusSync 正常 2`] = `
Object {
  "data": Object {
    "name": "",
    "pass": 99,
  },
  "error": [ValidationError: 密码必须大于或等于100],
}
`;

exports[`yup validatePlusSync 正常 3`] = `
Object {
  "data": Object {
    "name": "8",
    "pass": 101,
  },
}
`;
